Troubleshooting Overflow issue

--- a/style.css
+++ b/style.css
@@ -65,7 +65,13 @@ html, body {
     width: auto; 
     overflow: hidden}
 #mc_embed_signup .button:hover {background-color:#777;}
-#mc_embed_signup input {border: 1px solid #ABB0B2; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;  margin: 0 5px 10px 0; overflow: hidden}
+#mc_embed_signup input {
+    border: 1px solid #ABB0B2; 
+    -webkit-border-radius: 3px; 
+    -moz-border-radius: 3px; 
+    border-radius: 3px;  
+    margin: 0 5px 10px 0; 
+    overflow: hidden}
 #mc_embed_signup input:focus {border-color:#333;}
            
 .header {
